test_regress/t/t_class_unsup_bad.out
%Error: t/t_class_unsup_bad.v:6:1: Unsupported: virtual interface
virtual interface vi_t vi;
^~~~~~~
%Error: t/t_class_unsup_bad.v:7:1: Unsupported: virtual data type
virtual vi_t vi2;
^~~~~~~
%Error: t/t_class_unsup_bad.v:12:1: Unsupported: classes
class C #(parameter P=1);
^~~~~
%Error: t/t_class_unsup_bad.v:13:26: Unsupported: class parameters
   localparam LOCPAR = 10;
                         ^
%Error: t/t_class_unsup_bad.v:24:4: Unsupported: virtual class member qualifier
   virtual function void func_virtual; endfunction
   ^~~~~~~
%Error: t/t_class_unsup_bad.v:25:4: Unsupported: pure virtual class method
   pure virtual function void func_pure_virtual; endfunction
   ^~~~
%Error: t/t_class_unsup_bad.v:25:50: syntax error, unexpected endfunction
   pure virtual function void func_pure_virtual; endfunction
                                                 ^~~~~~~~~~~
%Error: t/t_class_unsup_bad.v:31:1: Unsupported: virtual classes
virtual class VC;
^~~~~~~
%Error: t/t_class_unsup_bad.v:31:9: Unsupported: classes
virtual class VC;
        ^~~~~
%Error: Exiting due to
